k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-devops-api-service
spec:
  selector:
    app: python-devops-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
